--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@ python/__pycache__/
 python/db/__pycache__/
 python/utils/__pycache__/
 python/votes_generator/__pycache__/
+
+# logs: file and folder
+python/votes_generator/logs
+python/votes_generator/logs/votes_generator.log
