- adding to .gitignore spark.zip file - new file vote_schema.py: schema for managing votes - new file votes_streaming_job.py: job for reading votes on kafka

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,6 @@ python/votes_generator/__pycache__/
 # logs: file and folder
 python/votes_generator/logs
 python/votes_generator/logs/votes_generator.log
+
+# spark zip
+spark.zip
