Renaming .\python\votes_generator\run_votes.py Refactor on folder spark -> streaming renaming spark.zip for streaming.zip, added to .gitignore adding new field on schema: province_name new scripts .\streaming\jobs: - run_job.py --> for running the spark job - votes_streaming --> for managing data process

--- a/.gitignore
+++ b/.gitignore
@@ -18,5 +18,11 @@ python/votes_generator/__pycache__/
 python/votes_generator/logs
 python/votes_generator/logs/votes_generator.log
 
-# spark zip
-spark.zip
+# streaming zip
+streaming.zip
+
+# datalake
+datalake
+checkpoints
+datalake/*
+checkpoints/*
