--- a/python/.env.example
+++ b/python/.env.example
@@ -1,5 +1,10 @@
+# DATABASE VARIABLES
 DB_HOST=my_host
 DB_PORT=my_port
 DB_USER=my_user
 DB_PASSWORD=my_pass
 DB_NAME=mi_db_name
+
+# SPARK CONFIG
+SCALA_VERSION='2.13'
+SPAK_VERSION='3.5.6'
