--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,49 +1,171 @@
+x-spark-common: &spark-common
+  build:
+    context: ./streaming/pymodules
+    dockerfile: Dockerfile
+  volumes:
+    - ./streaming:/opt/spark/streaming
+    - ./generation:/opt/spark/generation
+    - ./mnt/checkpoints:/mnt/spark-checkpoints
+    - ./mnt/spark-state:/mnt/spark-state
+  environment:
+    PYTHONPATH: /opt/spark
+  networks:
+    - votes
 
 services:
 
-  zookeeper:
-    image: confluentinc/cp-zookeeper:7.5.1
-    container_name: zookeeper
+  kafka-controller-1:
+    image: apache/kafka:3.8.1
+    container_name: kafka-controller-1
     environment:
-      ZOOKEEPER_CLIENT_PORT: 2181
-    ports:
-      - "2181:2181"
-    networks:
-      - bigdata
-
-  kafka:
-    image: confluentinc/cp-kafka:7.5.1
-    hostname: kafka
-    container_name: kafka
-    depends_on:
-      - zookeeper
-    ports:
-      - "9092:9092"
-      - "29092:29092"
-    environment:
-      KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:29092,PLAINTEXT_HOST://0.0.0.0:9092
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://localhost:9092
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_NODE_ID: 1
+      KAFKA_PROCESS_ROLES: controller
+      KAFKA_LISTENERS: CONTROLLER://:9093
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
+      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@kafka-controller-1:9093
     networks:
-      - bigdata
+      - votes
+    volumes:
+      - controller_data_1:/var/lib/kafka/data
+
+  kafka-broker-1:
+    image: apache/kafka:3.8.1
+    container_name: kafka-broker-1
+    ports:
+      - "29092:9092"
+    environment:
+      KAFKA_NODE_ID: 4
+      KAFKA_PROCESS_ROLES: broker
+      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:19092,PLAINTEXT_HOST://0.0.0.0:9092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka-broker-1:19092,PLAINTEXT_HOST://localhost:29092
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@kafka-controller-1:9093
+      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+    depends_on:
+      - kafka-controller-1
+    volumes:
+      - broker_data_1:/var/lib/kafka/data
+    networks:
+      - votes
 
   schema-registry:
     image: confluentinc/cp-schema-registry:7.5.1
     container_name: schema-registry
     depends_on:
-      - kafka
+      - kafka-broker-1
     environment:
       SCHEMA_REGISTRY_HOST_NAME: schema-registry
+      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: kafka-broker-1:19092
+      SCHEMA_REGISTRY_KAFKASTORE_TOPIC: _schemas
       SCHEMA_REGISTRY_LISTENERS: http://0.0.0.0:8081
-      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: PLAINTEXT://kafka:9092
     ports:
-      - "8081:8081"
+      - "18081:8081"
     networks:
-      - bigdata
+      - votes
+
+  console:
+    image: docker.redpanda.com/redpandadata/console:v2.5.2
+    entrypoint: /bin/sh
+    command: |-
+      -c 'echo "$$CONSOLE_CONFIG_FILE" > /tmp/config.yaml; /app/console'
+    ports:
+      - 8080:8080
+    depends_on:
+      - kafka-broker-1
+      - schema-registry
+    environment:
+      CONFIG_FILEPATH: /tmp/config.yaml
+      CONSOLE_CONFIG_FILE: |-
+        kafka:
+          brokers:
+            - kafka-broker-1:19092
+          schemaRegistry:
+            enabled: true
+            urls:
+              - http://schema-registry:8081
+            
+        connect:
+          enabled: true
+          clusters:
+            - name: local-connect-clusters
+              url: http://connect:8083
+    networks:
+      - votes
+
+  connect:
+    build:
+      context: streaming/connect
+      dockerfile: Dockerfile
+    container_name: connect
+    depends_on:
+      - kafka-broker-1
+    ports:
+      - "8083:8083"
+    environment:
+      CONNECT_BOOTSTRAP_SERVERS: kafka-broker-1:19092
+      CONNECT_GROUP_ID: connect-cluster
+
+      CONNECT_CONFIG_STORAGE_TOPIC: _connect-configs
+      CONNECT_OFFSET_STORAGE_TOPIC: _connect-offsets
+      CONNECT_STATUS_STORAGE_TOPIC: _connect-status
+
+      CONNECT_CONFIG_STORAGE_REPLICATION_FACTOR: 1
+      CONNECT_OFFSET_STORAGE_REPLICATION_FACTOR: 1
+      CONNECT_STATUS_STORAGE_REPLICATION_FACTOR: 1
+
+      CONNECT_KEY_CONVERTER: org.apache.kafka.connect.json.JsonConverter
+      CONNECT_VALUE_CONVERTER: org.apache.kafka.connect.json.JsonConverter
+      CONNECT_INTERNAL_KEY_CONVERTER: org.apache.kafka.connect.json.JsonConverter
+      CONNECT_INTERNAL_VALUE_CONVERTER: org.apache.kafka.connect.json.JsonConverter
+
+      CONNECT_REST_ADVERTISED_HOST_NAME: connect
+      CONNECT_REST_PORT: 8083
+    networks:
+      - votes
+
+  spark-master:
+    <<: *spark-common
+    container_name: spark-master
+    command: > 
+      /opt/spark/bin/spark-class
+      org.apache.spark.deploy.master.Master
+    ports:
+     - "9190:8080"
+     - "7077:7077"
+     - "4040:4040"
+     - "8081:8081"
+    environment:
+      PYTHONPATH: /opt/spark
+
+  spark-worker: &spark-worker-image
+    <<: *spark-common
+    command: >
+      /opt/spark/bin/spark-class
+      org.apache.spark.deploy.worker.Worker
+      spark://spark-master:7077
+    depends_on:
+      - spark-master
+    environment:
+      SPARK_MODE: worker
+      SPARK_WORKER_CORES: 1
+      SPARK_WORKER_MEMORY: 1g
+      SPARK_MASTER_URL: spark://spark-master:7077
+      PYTHONPATH: /opt/spark
+    networks:
+      - votes
+
+  spark-worker-2:
+    <<: *spark-worker-image
+
+  spark-worker-3:
+    <<: *spark-worker-image
 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.13.2
@@ -55,7 +177,7 @@ services:
     ports:
       - "9200:9200"
     networks:
-      - bigdata
+      - votes
 
   kibana:
     image: docker.elastic.co/kibana/kibana:8.13.2
@@ -68,30 +190,11 @@ services:
     ports:
       - "5601:5601"
     networks:
-      - bigdata
+      - votes
 
-  control-center:
-    image: confluentinc/cp-enterprise-control-center:7.5.1
-    container_name: control-center
-    depends_on:
-      - zookeeper
-      - kafka
-      - schema-registry
-    ports:
-      - "9021:9021"
-    environment:
-      CONTROL_CENTER_BOOTSTRAP_SERVERS: "kafka:29092"
-      CONTROL_CENTER_ZOOKEEPER_CONNECT: zookeeper:2181
-      CONTROL_CENTER_SCHEMA_REGISTRY_URL: "http://schema-registry:8081"
-      CONTROL_CENTER_CONNECT_CLUSTER: "http://kafka:29092"
-      CONTROL_CENTER_REPLICATION_FACTOR: 1
-      CONTROL_CENTER_COMMAND_TOPIC_REPLICATION: 1
-      CONTROL_CENTER_MONITORING_INTERCEPTOR_CLIENT: true
-      CONFLUENT_METRICS_ENABLE: "false"
-      PORT: 9021
-    networks:
-      - bigdata
+volumes:
+  controller_data_1:
+  broker_data_1:
 
 networks:
-  bigdata:
-    driver: bridge
+  votes:
