--- a/streaming/connect/Dockerfile
+++ b/streaming/connect/Dockerfile
@@ -2,6 +2,8 @@ FROM confluentinc/cp-kafka-connect:7.6.1
 
 USER root
 
-RUN confluent-hub install confluentinc/kafka-connect-elasticsearch:14.0.8
+COPY sink-elasticsearch-votes.json /opt/connect/sink-elasticsearch-votes.json
+
+RUN confluent-hub install --no-prompt confluentinc/kafka-connect-elasticsearch:14.1.4
 
 USER appuser
