Adapting spark job to be able to access to internal database

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,6 +5,7 @@ x-spark-common: &spark-common
   volumes:
     - ./streaming:/opt/spark/streaming
     - ./generation:/opt/spark/generation
+    - ./logs:/opt/spark/logs
     - ./mnt/checkpoints:/mnt/checkpoints
     - ./mnt/spark-state:/mnt/spark-state
     - ./mnt/datalake:/mnt/datalake
