--- a/generation/.env.example
+++ b/generation/.env.example
@@ -1,5 +1,6 @@
 # DATABASE VARIABLES
-DB_HOST=my_host
+DB_LOCALHOST=my_host
+DB_DOCKERHOST=host.docker.internal
 DB_PORT=my_port
 DB_USER=my_user
 DB_PASSWORD=my_pass
