--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -59,6 +59,11 @@ services:
 
   schema-registry:
     image: confluentinc/cp-schema-registry:7.5.1
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:8081/subjects" ]
+      interval: 10s
+      timeout: 5s
+      retries: 10
     container_name: schema-registry
     depends_on:
       - kafka-broker-1
@@ -80,8 +85,12 @@ services:
     ports:
       - 8080:8080
     depends_on:
-      - kafka-broker-1
-      - schema-registry
+      kafka-broker-1:
+        condition: service_started
+      schema-registry:
+        condition: service_healthy
+      connect:
+        condition: service_started
     environment:
       CONFIG_FILEPATH: /tmp/config.yaml
       CONSOLE_CONFIG_FILE: |-
